[package]
name = "bitcursor"
version = "0.1.0"
authors = ["barrelll <jharrell_@outlook.com>"]
exclude = [
    ".idea/*",
]
description = "Keeps track of the bit position for an in wrapped memory buffer, and provides it with a read, seek implementation. Also applys a new trait called ReadBits which allows reading types that implement Unit from the cursor."
license = "MIT"

[dependencies]
